[project]
name = "lasr-demo-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "UFO-101", email = "josephmiller101@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pyright>=1.1.394",
]

[tool.ruff]
line-length = 88

[tool.pyright]
reportMissingParameterType = true
reportUnknownParameterType = true
